# clvm_tools_rs

./: .gitignore  Cargo.toml  rust-toolchain.toml
.github/workflows/: build-arm64-wheels.yml  build-crate.yml  build-m1-wheel.yml  build-riscv.yml  build-test.yml  chia-gaming-tests.yml  extensive-tests.yml  npm-publish.yml  pre_043_regression.yml
resources/coverage/: run_coverage.py
resources/tests/: cse-complex-2.clsp  test-env-overflow-cl24.hex  test-env-overflow.clsp
resources/tests/cmdline/tests/: cmds_test.py
resources/tests/module/: cache-test-1.clsp  impzz.clsp  p1s_host.clsp  two_program_import_include.clsp  unlabeled-module.clsp
resources/tests/module/programs/: p1s.clsp  three-outputs-common.clsp  two-outputs-constant.clsp  two-outputs-include.clsp  zerozero.clsp
resources/tests/module/std/: prelude.clinc  relops.clinc  slice.clinc
src/: lib.rs
src/classic/bins/: repl.rs  shrink.rs
src/classic/clvm_tools/: binutils.rs  clvmc.rs  cmds.rs  comp_input.rs  debug.rs
src/classic/clvm_tools/ir/: reader.rs  type.rs  writer.rs
src/classic/clvm_tools/stages/stage_2/: operators.rs
src/compiler/: cldb.rs  codegen.rs  compiler.rs  comptypes.rs  dialect.rs  diskcache.rs  evaluate.rs  frontend.rs  inline.rs  mod.rs  rename.rs  repl.rs  resolve.rs  sexp.rs  usecheck.rs
src/compiler/optimize/: above22.rs  cse.rs  deinline.rs  depgraph.rs  mod.rs  strategy.rs
src/compiler/preprocessor/: macros.rs  mod.rs
src/py/: binutils.rs  cmds.rs
src/tests/classic/: bitconst.rs  mod.rs  optimize.rs  run.rs  smoke.rs  stage_2.rs
src/tests/compiler/: cl26_fuzz_compare.rs  cldb.rs  codegen_funcache.rs  compiler.rs  evaluate.rs  fuzz.rs  mod.rs  module_cache.rs  modules.rs  preprocessor.rs  repl.rs  resolve.rs
src/tests/compiler/optimizer/: cse.rs  cse_fuzz.rs  cse_regression.rs  deinline.rs  depgraph.rs  mod.rs  output.rs
support/: change-chialisp-rev.py  chia-gaming-run-clsp-tests.sh
wasm/: Cargo.toml
wasm/src/: api.rs
