[package]
name = "chialisp"
version = "0.4.1"
edition = "2021"
authors = ["Art Yerkes <art.yerkes@gmail.com>"]
description = "tools for working with chialisp language; compiler, repl, python and wasm bindings"
readme = "README.md"
repository = "https://github.com/Chia-Network/chialisp"
license = "Apache-2.0"
keywords = ["chia", "chialisp", "clvm"]
categories = ["command-line-utilities"]

[package.metadata.maturin]
python-source = "python"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binascii = "0.1.4"
chia-bls = "=0.36.0"
clvmr = { version = "0.16.2", features = ["pre-eval"] }
do-notation = "0.1.3"
hashlink = "0.11.0"
hex = "0.4.3"
indoc = "2.0.5"
lazy_static = "1.4.0"
lfsr = { version = "0.3.0", optional = true }
num = "0.4.3"
num-bigint = { version = "0.4.4", features = ["serde"] }
num-traits = "0.2.15"
rand = { version = "0.9.0", optional = true }
rand_chacha = { version = "0.9.0", optional = true }
regex = "1.12.3"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
sha2 = "0.10.9"
tempfile = "3.26.0"
unicode-segmentation = "1.12.0"
yaml-rust2 = "0.11.0"

[dependencies.pyo3]
version = "0.25.1"
features = ["abi3-py310", "extension-module"]
optional = true

[dev-dependencies]
lfsr = "0.3.0"
rand = "0.9.2"
rand_chacha = "0.9.0"

[lib]
name = "chialisp"
crate-type = ["cdylib", "rlib"]

[features]
extension-module = ["dep:pyo3"]
fuzz = ["dep:rand", "dep:rand_chacha", "dep:lfsr"]
default = []

[target.'cfg(target_family="wasm")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3.77"
wasm-bindgen = { version = "^0.2.100", features = ["serde-serialize"] }

[target.'cfg(not(target_family="wasm"))'.dependencies]
getrandom = { version = "0.2" }

[build-dependencies]
pyo3-build-config = "0.24.0"

[[bin]]
name = "opd"
path = "src/classic/bins/opd.rs"

[[bin]]
name = "opc"
path = "src/classic/bins/opc.rs"

[[bin]]
name = "run"
path = "src/classic/bins/run.rs"

[[bin]]
name = "brun"
path = "src/classic/bins/brun.rs"

[[bin]]
name = "cldb"
path = "src/classic/bins/cldb.rs"

[[bin]]
name = "shrink"
path = "src/classic/bins/shrink.rs"

[[bin]]
name = "clisp_to_json"
path = "src/classic/bins/clisp_to_json.rs"

[[bin]]
name = "repl"
path = "src/classic/bins/repl.rs"
